- Added global configuration settings dialog. You can find it in the
  profiler's about menu (the wrench icon in the welcome dialog).
- List of found zones in the Find zone menu can be filtered by user text.
- Fixed div-by-zero in cvsexport utility when there was only one zone of
  a kind.
- Fixed compatibility problems with FreeBSD.
- Added support for dynamically loaded Vulkan symbols.


v0.9.1 (2023-02-26)
-------------------

- Support for pre-0.8 traces has been dropped.
- Profiled programs will ignore dlclose() calls.
- Added warning when the profiler interface is run with privilege elevation.
  Advice is given to instead run the client with admin rights.
- Switched to official ZEN4 uarch data.
- Handle cases when thread name is set, but not through Tracy facilities.
- Allow customization of source location data through the following macros:
  - TracyFunction - defaults to __FUNCTION__
  - TracyFile - defaults to __FILE__
  - TracyLine - defaults to __LINE__
- Tracy on Linux now targets and requires Wayland by default.
  - Please don't ask about window decorations on Gnome. Current behavior is
    the intended behavior. Gnome does not want windows to have decorations,
    and Tracy respects this choice. If you find this problematic, use a
    desktop environment that actually listens to its users.
  - Pass LEGACY=1 parameter to make, if you want to instead rely on the GLFW
    library, like before.
  - Other platforms still use GLFW.
- Compare traces menu can now display source code differences between two
  traces.
- Assembly listings saved to files have been improved.
  - Listings are now annotated with source line information.
  - To improve compatibility with external tools comments are now prefixed
    with '#' instead of ';'.
- Histogram tooltip will now also show left/right counts.
- Tracy now actively manages timeline vertical scroll offset in order to keep
  the thread under the mouse cursor in the same place on screen.